# dousei

./: .env  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  WEB_UI_README.md  app.py  cli.py  commute_optimizer.py  config.py  data_fetcher.py  database_manager.py  package-lock.json  package.json  pyproject.toml  start.sh
plans/: architecture_diagram.md  tech_stack_2026.md  ui_implementation_plan.md  ui_improvements_plan.md
web/: models.py  package-lock.json  package.json  vite.config.js
web/public/: index.html
web/public/src/: api.js  main.js  map.js  styles.css  ui.js
